--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matter.js - デュアルパチンコシミュレーション</title>
+    <title>パチスロ</title>
     <style>
       body {
         font-family: "Helvetica Neue", Arial, sans-serif;
