--- a/index.html
+++ b/index.html
@@ -41,10 +41,33 @@
       .right-panel {
         flex: 0 0 250px;
         padding: 20px;
+        position: relative;
+        overflow: hidden;
+      }
+
+      .right-panel video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+      }
+
+      .right-panel > * {
+        position: relative;
+        z-index: 1;
       }
 
       .state {
         padding: 20px;
+        /*background-color: rgba(0, 0, 0, 0.7);*/
+        color: white;
+        border-radius: 8px;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+        font-weight: bold;
+        margin-bottom: 10px;
       }
 
       .slot-container {
@@ -70,8 +93,11 @@
 
       .slot-wrap {
         display: flex;
-        gap: 12px;
-        align-items: center;
+        gap: 10px;
+        justify-content: center;
+        /*background-color: rgba(0, 0, 0, 0.6);*/
+        padding: 15px;
+        border-radius: 8px;
       }
 
       .reel {
@@ -172,6 +198,8 @@
         </div>
 
         <div class="right-panel" id="right-panel1">
+          <video id="video1" autoplay muted loop playsinline></video>
+
           <div class="state" id="state1">Uninitialized</div>
 
           <div class="slot-wrap" id="slot">
@@ -207,6 +235,8 @@
         </div>
 
         <div class="right-panel" id="right-panel2">
+          <video id="video2" autoplay muted loop playsinline></video>
+
           <div class="state" id="state2">Uninitialized</div>
 
           <div class="slot-wrap" id="slot2">
@@ -1902,6 +1932,22 @@
             clearInterval(intervalId);
           });
           keyIntervals.clear();
+        };
+
+        // 背景動画を設定するためのヘルパー関数
+        window.setBackgroundVideo = (playerId, videoSrc) => {
+          const video = document.getElementById(`video${playerId}`);
+          if (video && videoSrc) {
+            video.src = videoSrc;
+            video.load(); // 新しいソースを読み込み
+            console.log(`Player ${playerId}の背景動画を設定: ${videoSrc}`);
+          }
+        };
+
+        // 両方のプレイヤーに同じ動画を設定するヘルパー関数
+        window.setBackgroundVideoForBoth = (videoSrc) => {
+          window.setBackgroundVideo(1, videoSrc);
+          window.setBackgroundVideo(2, videoSrc);
         };
 
         // 初期状態の表示を更新
